User can read home page on mobile device. Fix flicker when clicking on mobile nav icon. Fix search drop down doesn't close on homepage [#55629950 #56748618 #56720890].

--- a/src/main/stylesheets/icons.css.scss
+++ b/src/main/stylesheets/icons.css.scss
@@ -19,11 +19,6 @@ $icon-sprite: url("../img/iconsprite.png");
     height: 154px;
     background-position: 154px 191px;
   }
-  &.icon-spring-logo {
-    // width: 154px;
-    // height: 45px;
-    // background-position: 1000px 836px;
-  }
   &.project--logo {
     &.logo-spring-framework {
       width: 135px;
