--- a/src/main/stylesheets/responsive.css.scss
+++ b/src/main/stylesheets/responsive.css.scss
@@ -185,6 +185,8 @@ $icon-sprite: url("../img/iconsprite.png");
       -moz-transition: all 0.25s;
       -ms-transition: all 0.25s;
       -o-transition: all 0.25s;
+      -webkit-perspective: 1000;
+      -webkit-backface-visibility: hidden;
       .mobile-search--container {
         margin: 9px;
         padding: 5px;
@@ -261,6 +263,8 @@ $icon-sprite: url("../img/iconsprite.png");
       -moz-transition: all 0.25s;
       -ms-transition: all 0.25s;
       -o-transition: all 0.25s;
+      -webkit-perspective: 1000;
+      -webkit-backface-visibility: hidden;
       .nav-icon {
         position: absolute;
         padding: 13px;
@@ -283,13 +287,14 @@ $icon-sprite: url("../img/iconsprite.png");
       }
     }
   }
-  .body--container {
-
+  .body--container, .homepage--body {
     transition: all 0.25s;
     -webkit-transition: all 0.25s;
     -moz-transition: all 0.25s;
     -ms-transition: all 0.25s;
     -o-transition: all 0.25s;
+    -webkit-perspective: 1000;
+    -webkit-backface-visibility: hidden;
     &.js-slide-right {
       transform: translateX(85%);
       -webkit-transform: translateX(85%);
@@ -371,7 +376,7 @@ $icon-sprite: url("../img/iconsprite.png");
     }
     .platform--wrapper {
       padding: 30px 0 60px;
-
+      background-size: 404px;
       .platform--icon {
         margin-bottom: 15px;
         transform: scale(0.75);
